Better corners, translucent white

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="https://github.com/m-i-n-a-r" target="_blank" class="fab fa-github fa-2x"></a></li>
         <li><a href="https://www.linkedin.com/in/gianluca-conti-723926147/" target="_blank" class="fab fa-linkedin fa-2x"></a></li>
         <li><a href="https://play.google.com/store/apps/dev?id=7720251761301594831" target="_blank" class="fab fa-google-play fa-2x"></a></li>
-        <li><a href="https://www.youtube.com/channel/UChVxFCDNULWEiDqfrjuZ3Tw" target="_blank" class="fab fa-youtube fa-2x"></a></li>
+        <!--<li><a href="https://www.youtube.com/channel/UChVxFCDNULWEiDqfrjuZ3Tw" target="_blank" class="fab fa-youtube fa-2x"></a></li>-->
         <li><a href="https://www.instagram.com/minar.tastic/" target="_blank" class="fab fa-instagram fa-2x"></a></li>
       </ul>
       </section>
@@ -68,52 +68,44 @@
         <header class="major">
           <h2><b>MY PERSONAL SKILLS</b></h2>
         </header>
-        <ul>
-          <li>
-            <h2><i class="fas fa-code"></i><b>Languages and frameworks</b></h2>
-            <ul class="features outline">
-              <li>Java</li>
-              <li>C</li>
-              <li>Javascript</li>
-              <li>Angular</li>
-              <li>Typescript</li>
-              <li>Python</li>
-              <li>Kotlin</li>
-              <li>Dart</li>
-              <li>Flutter</li>
-              <li>HTML/css</li>
-              <li>SQL</li>
-              <li>LUA</li>
-            </ul>
-          </li>
-          <li>
-            <h2><i class="fas fa-laptop"></i><b>Softwares and platforms</b></h2>
-            <ul class="features outline">
-              <li>Android Studio</li>
-              <li>Visual Studio</li>
-              <li>Eclipse</li>
-              <li>Office suite</li>
-              <li>Adobe Photoshop</li>
-              <li>Adobe Illustrator</li>
-              <li>Sony Vegas</li>
-              <li>Linux OSes and bash</li>
-              <li>Windows and PowerShell</li>
-              <li>PostgreSQL</li>
-            </ul>
-          </li>
-          <li>
-            <h2><i class="fas fa-suitcase"></i><b>Hardware and miscellanous</b></h2>
-            <ul class="features outline">
-              <li>Delta 3D printers</li>
-              <li>Pc repair</li>
-              <li>Kernel and rom compilation</li>
-              <li>Advanced Android using</li>
-              <li>3D modeling and processing</li>
-              <li>System administration</li>
-              <li>Social media management</li>
-              <li>Fluent english speaker</li>
-            </ul>
-          </li>
+        <h2><i class="fas fa-code"></i><b>Languages and frameworks</b></h2>
+        <ul class="features outline">
+          <li>Java</li>
+          <li>C</li>
+          <li>Javascript</li>
+          <li>Angular</li>
+          <li>Typescript</li>
+          <li>Python</li>
+          <li>Kotlin</li>
+          <li>Dart</li>
+          <li>Flutter</li>
+          <li>HTML/css</li>
+          <li>SQL</li>
+          <li>LUA</li>
+        </ul>
+        <h2><i class="fas fa-laptop"></i><b>Softwares and platforms</b></h2>
+        <ul class="features outline">
+          <li>Android Studio</li>
+          <li>Visual Studio</li>
+          <li>Eclipse</li>
+          <li>Office suite</li>
+          <li>Adobe Photoshop</li>
+          <li>Adobe Illustrator</li>
+          <li>Sony Vegas</li>
+          <li>Linux OSes and bash</li>
+          <li>Windows and PowerShell</li>
+          <li>PostgreSQL</li>
+        </ul>
+        <h2><i class="fas fa-suitcase"></i><b>Hardware and miscellanous</b></h2>
+        <ul class="features outline">
+          <li>Delta 3D printers</li>
+          <li>Pc repair</li>
+          <li>Kernel and rom compilation</li>
+          <li>Advanced Android using</li>
+          <li>3D modeling and processing</li>
+          <li>System administration</li>
+          <li>Social media management</li>
+          <li>Fluent english speaker</li>
         </ul>
       </section>
 
