--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <h3><b>Fun facts!</b></h3>
         </header>
         <ul class="facts">
-          <li>I like to dress elegantly every time is possible.</li>
+          <li>I like to dress elegantly, every time is possible.</li>
           <li>I'm part of different groups of developers, especially on Telegram. Here i found some real friends.</li>
           <li>I can recognize almost any car model i see, and i especially like japanese sport cars.</li>
           <li>Even if i'm not a boy anymore, i often use my free times to play videogames. One of my favourite is
