--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@
             <span class="icon fas fa-money"></span>
             <strong>30.000</strong> Play Store paid downloads
           </li>
-          <li class="style3">
+          <li class="style1">
             <span class="icon fas fa-calendar-check"></span>
             <strong id="experience"></strong> Years of experience
           </li>
-          <li class="style4">
+          <li class="style2">
             <span class="icon fas fa-list-alt"></span>
             <strong>30</strong> Github repositories
           </li>
-          <li class="style5">
+          <li class="style1">
             <span class="icon fa-diamond"></span>
             <strong>+1.000</strong> Animations and icons created
           </li>
@@ -303,7 +303,7 @@
 
   <script>
     // Variables to change to correctly generate the initial description and other informations
-    birthYear = 1995; // Mear of birth
+    birthYear = 1995; // Year of birth
     birthMonth = 2; // Month of birth, without leading zero
     birthDay = 23; // Day of birth, without leading zero
     experienceStart = 2011; // Year from which the experience starts (e.g. when i wrote my first line of code)
