Cleanup, comments, fixes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
   <meta name="theme-color" content="#000000">
   <!-- Css files involved, including the local css and FontAwesome v5 -->
   <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
-  <noscript>
-    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
 <body>
@@ -248,7 +246,7 @@
             <strong>100.000</strong> Play Store downloads
           </li>
           <li class="style2">
-            <span class="icon fas fa-money"></span>
+            <span class="icon fas fa-money-bill"></span>
             <strong>30.000</strong> Play Store paid downloads
           </li>
           <li class="style1">
@@ -260,7 +258,7 @@
             <strong>30</strong> Github repositories
           </li>
           <li class="style1">
-            <span class="icon fa-diamond"></span>
+            <span class="icon fas fa-gem"></span>
             <strong>+1.000</strong> Animations and icons created
           </li>
         </ul>
