Copyright, social in contacts

--- a/index.html
+++ b/index.html
@@ -278,17 +278,28 @@
       <section>
         <h2>How to contact me:</h2>
         <!-- Some contact informations. Other informations can be added -->
-        <dl class="alt">
+        <dl class="alt">   
+          <dt>Email</dt>
+          <dd><a href="mailto:minar.tastic@gmail.com?Subject=Request">minar.tastic@gmail.com</a></dd>      
           <dt>City</dt>
           <dd>Rome, Italy</dd>
-          <dt>Email</dt>
-          <dd><a href="mailto:minar.tastic@gmail.com?Subject=Request">minar.tastic@gmail.com</a></dd>
+          <dt>Social</dt>
+          <dd>
+            <ul class="icons">
+              <li><a href="https://github.com/m-i-n-a-r" target="_blank" class="fab fa-github"></a></li>
+              <li><a href="https://www.linkedin.com/in/gianluca-conti-723926147/" target="_blank" class="fab fa-linkedin"></a></li>
+              <li><a href="https://play.google.com/store/apps/dev?id=7720251761301594831" target="_blank" class="fab fa-google-play"></a></li>
+              <li><a href="https://www.instagram.com/minar.tastic/" target="_blank" class="fab fa-instagram"></a></li>
+            </ul>
+          </dd>
         </dl>
+      </section>
+      <p class="copyright">Copyright &copy; 2019 Gianluca Conti</p>
     </footer>
   </div>
 
 
-  <!-- Scripts -->
+  <!-- Scripts - some arent't used, but could be useful -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery.scrollex.min.js"></script>
   <script src="assets/js/jquery.scrolly.min.js"></script>
