--- a/index.html
+++ b/index.html
@@ -98,20 +98,21 @@
           <li>Visual Studio</li>
           <li>Eclipse</li>
           <li>Office suite</li>
-          <li>Adobe Photoshop</li>
-          <li>Adobe Illustrator</li>
+          <li>Adobe Suite</li>
+          <li>Inkscape</li>
           <li>Sony Vegas</li>
           <li>Linux OSes and bash</li>
           <li>Windows and PowerShell</li>
           <li>PostgreSQL</li>
+          <li>Fusion360</li>
           <li>Simplify3D</li>
         </ul>
 
         <h2><i class="fas fa-suitcase"></i><b>Hardware and miscellanous</b></h2>
         <ul class="features outline">
           <li>Software architectures</li>
-          <li>Delta 3D printers</li>
-          <li>Pc repair</li>
+          <li>3D printers maintenance</li>
+          <li>Pc repair and assembly</li>
           <li>Kernel and rom compilation</li>
           <li>Advanced Android using</li>
           <li>3D modeling and processing</li>
@@ -119,6 +120,7 @@
           <li>Social media management</li>
           <li>Fluent english speaker</li>
           <li>Logic and problem solving</li>
+          <li>Photographic skills</li>
           <li>Creative design skills</li>
         </ul>
       </section>
@@ -141,7 +143,7 @@
               <span class="image-small"><img src="images/pipboy.png" alt="" /></span>
               <p>
                 This watchface was started back in 2015 as a personal project. It uses LUA scripting and a set of graphic
-                resources, personally recreated in Photoshop. I gradually improved it, and today it has around 20k
+                resources, personally recreated in Photoshop. I gradually improved it, and today it has around 25k
                 paid downloads. I'm still working on it!
               </p>
             </div>
@@ -218,7 +220,7 @@
         </div>
       </section>
 
-      <!-- Fun facts (not an actual section, but sometimes they help) -->
+      <!-- Fun facts (not an actual section, but it's useful sometimes) -->
       <section id="funfacts" class="main special">
         <h3><b>Fun facts!</b></h3>
         <ul class="facts">
@@ -247,7 +249,7 @@
         <ul class="statistics">
           <li class="style1">
             <span class="icon fas fa-download"></span>
-            <strong>100.000</strong> Play Store downloads
+            <strong>+100.000</strong> Play Store downloads
           </li>
           <li class="style2">
             <span class="icon fas fa-money-bill"></span>
