--- a/index.html
+++ b/index.html
@@ -191,6 +191,24 @@
         <div class="spotlight">
           <div class="content">
             <header class="major">
+              <h3><b>Birday - Birthday Manager</b></h3>
+            </header>
+            <div>
+              <span class="image-small"><img src="images/birday.png" alt="" /></span>
+              <p>
+                Another free time app, written in Kotlin this time. Basically, it's an open source birthday manager, and it's available
+                free. It uses a Room database and the MVVM design pattern, providing an automatic import of birthdays from Google Contacts.
+                The code is available on Github for improvements and translations.
+              </p>
+            </div>
+            <a href="https://play.google.com/store/apps/details?id=com.minar.birday" class="button small" target="_blank">Learn
+              More</a>
+          </div>
+        </div>
+
+        <div class="spotlight">
+          <div class="content">
+            <header class="major">
               <h3><b>Folginar Development Project</b></h3>
             </header>
             <div>
